tests/baselines/reference/propertyAndFunctionWithSameName.errors.txt
==== tests/cases/conformance/classes/propertyMemberDeclarations/propertyAndFunctionWithSameName.ts (2 errors) ====
    class C {
        x: number;
        x() { // error
        ~
!!! error TS2300: Duplicate identifier 'x'.
            return 1;
        }
    }
    
    class D {
        x: number;
        x(v) { } // error
        ~
!!! error TS2300: Duplicate identifier 'x'.
    }